--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animate_do: ^2.1.0
   font_awesome_flutter: ^10.2.1
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
